# sonata-neo4j-loader

./: .env.example  .gitignore  README.md  load_circuit.py  load_simulation.py  main.py  main2.py  neo4j_connector.py  pyproject.toml  reader.py  subsampling.py
src/: main.py
src/circuit/: circuit_loader.py  data_extraction.py  neo4j_operations.py
src/simulation/: base_simulation.py  sim_type_A.py  simulation_loader.py
src/sonata_to_neo4j/: main.py  utils.py
src/sonata_to_neo4j/circuit/: circuit_loader.py  data_extraction.py  neo4j_operations.py
src/sonata_to_neo4j/scripts/: load_circuit.py  load_simulation.py  neo4j_connector.py
src/sonata_to_neo4j/simulation/: base_simulation_loader.py  basic_simulation.py  sim_type_A.py  simulation_campaign.py  simulation_loader.py
tests/: test_circuit_loader.py  test_simulation_loader.py
